Fri Jul 18 16:53:02 UTC 2008  Jonathan Pollack  <pollack_j@ociweb.com>

        * dds/InfoRepo/FederatorManagerImpl.inl:

          Fixed a build error on older gcc compilers.

Wed Jul 16 18:14:33 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>
        Merging trunk changes 1260:1300 out to branch.

        Tue Jul 15 22:26:55 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * bin/dcps_ts.pl:

          Added --extension which is a plugin mechanism for dcps_ts.pl.

        Tue Jul 15 13:57:08 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * tests/DCPS/DcpsIntegration/run_test-integration.pl:
        * tests/DCPS/DcpsIntegration/run_test-topic.pl:

          Changed to use actual object to call methods in error handling
          section.

        Sun Jul 13 19:10:57 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/SetQosDeadline/DataReaderListener.cpp:
        * tests/DCPS/SetQosPartition/DataReaderListener.cpp:

          Removed Stack_Trace header which is not needed.

        Sat Jul 12 20:52:56 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/InfoRepo/DCPS_IR_Publication.h:
        * dds/InfoRepo/DCPS_IR_Publication.cpp:
        * dds/InfoRepo/DCPS_IR_Subscription.h:
        * dds/InfoRepo/DCPS_IR_Subscription.cpp:
        * dds/InfoRepo/DCPS_IR_Topic.cpp:
        * dds/InfoRepo/DCPS_IR_Topic_Description.cpp:

          More fixes from DDS-1.1.1 branch.

        * tests/DCPS/SetQosPartition/pub.ini:
        * tests/DCPS/SetQosPartition/sub.ini:

          Added missing files.

        Fri Jul 11 22:45:25 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * bin/dcps_tests.lst:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/DomainParticipantImpl.cpp:
        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/SubscriberImpl.cpp: