@@ -1,3 +1,11 @@
+Thu Jul 24 14:09:54 UTC 2008  Jonathan Pollack  <pollack_j@ociweb.com>
+
+        * dds/InfoRepo/DCPSInfoRepo.mpc:
+        * dds/InfoRepo/InfoRepoMulticastResponder.h:
+        * dds/InfoRepo/InfoRepoMulticastResponder.cpp:
+
+          Added beginnings of a multicast responder for federation.
+
 Fri Jul 18 16:53:02 UTC 2008  Jonathan Pollack  <pollack_j@ociweb.com>
 
         * dds/InfoRepo/FederatorManagerImpl.inl:
